<resources>
    <string name="app_name">mCity</string>
    <string name="username">Username</string>
    <string name="Phonenumber">Mobile Number</string>
    <string name="password">Enter 5 digit Email Passcode</string>
    <string name="Submit">Submit</string>
    <string name="conpassword">Retype Password</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="terms"><![CDATA[By Login an account, you agree to Mcity\'s Terms & Conditions,Privacy Policy and Content Policies.]]></string>

    <string name="termsreg"><![CDATA[By Register an account,you agree to Mcity\'s terms & conditions,Privacy Policy and Content Policies.]]></string>
    <string name="minValue">Min Value In Rs</string>
    <string name="maxValue">Max Value In Rs</string>
    <string name="projectdescription">Property Description</string>
    <string name="address">City</string>
    <string name="Landmark">Landmark</string>
    <string name="city">City</string>
    <string name="Montrhlyamt">Monthly Rent Amount</string>
    <string name="depositamount">Deposit Amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="tc"><![CDATA[ * T&C apply]]></string>

    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="auto"><![CDATA[* Prices & Rates are subject to vary.]]></string>
    <string name="time">10 AM to 10 PM (Mon-Sun)</string>
    <string name="ok">UPDATE</string>
    <string name="not_ok">NOT NOW</string>
    <string name="con_one">In Case of any Emergency in the Community would you like to be notified.</string>
    <string name="con_two">Would you like to Volunteer with mCity App Team to update on any Emergency Information.</string>
    <string name="chk_one">Yes via Sms</string>
    <string name="chk_two">No I do not want to be notified.</string>
    <string name="chk_three">Yes</string>
    <string name="chk_four">No</string>
</resources>
