<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:background="@color/colorAccent"
            android:gravity="start|center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_7sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="mCEAS"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/settings_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_icon"
                android:layout_gravity="right|center"/>
        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d8d8d8">
    </View>


    <LinearLayout
        android:id="@+id/lin_condition_one"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg2"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="COMMUNITY EMERGENCY ALERT SYSTEM"/>

        <View
            android:layout_width="@dimen/_248sdp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="#000000">
        </View>




        <TextView
            android:layout_width="@dimen/_27sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_gravity="right"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:background="@drawable/circle"
            android:text="1"/>



        <TextView
            android:id="@+id/txt_con_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:textColor="#000000"
            android:layout_gravity="center"
           android:layout_marginTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:text="@string/con_one"/>


        <CheckBox
            android:id="@+id/chkone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:text="@string/chk_one"/>

        <CheckBox
            android:id="@+id/chktwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:text="@string/chk_two"
            android:checked="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_condition_two"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg1"
        android:orientation="vertical">


        <TextView
            android:layout_width="@dimen/_27sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_gravity="right"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:background="@drawable/circle"
            android:text="2"
            android:id="@+id/textView7" />

        <TextView
            android:id="@+id/txt_con_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:text="@string/con_two"/>

        <CheckBox
            android:id="@+id/chkthree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:text="@string/chk_three" />

        <CheckBox
            android:id="@+id/chkfour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:text="@string/chk_four"
            android:checked="true"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/button_liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:layout_gravity="center"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerVertical="true"
            style="?android:attr/progressBarStyle"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/submit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/submit_icon"/>
    </LinearLayout>

</LinearLayout>